[gd_scene load_steps=5 format=3 uid="uid://difu4o4sj24iu"]

[ext_resource type="Script" path="res://Prefabs/Bomb/Bomb_Explosion.gd" id="1_1d6p3"]
[ext_resource type="AudioStream" uid="uid://d7mhun4oen1l" path="res://Prefabs/Bomb/Sounds/Thud.mp3" id="2_78v11"]
[ext_resource type="Texture2D" uid="uid://b2qqqptu5u34x" path="res://Prefabs/Alien/Sprites/AlienDeath.png" id="3_m32sn"]
[ext_resource type="Texture2D" uid="uid://8x7yinyohkik" path="res://Lights/LightGradient.png" id="4_wh1vc"]

[node name="BombExplosion" type="Node2D"]
script = ExtResource("1_1d6p3")
FadeSeconds = 0.6

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_78v11")
autoplay = true
panning_strength = 2.0

[node name="BombExplosionSprite" type="Sprite2D" parent="."]
modulate = Color(0.639216, 0.32549, 0.101961, 1)
rotation = 1.5708
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_m32sn")

[node name="ExplosionLight" type="PointLight2D" parent="."]
color = Color(0.705882, 0.427451, 0.0470588, 1)
energy = 9.14
texture = ExtResource("4_wh1vc")
texture_scale = 0.2
height = 1.0
